--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../../style/main.css" />
+    <link rel="stylesheet" href="/style/main.css" />
   </head>
   <!-- NO AI WILL BE USED IN THE PROJECT AT ALL -->
   <!-- THIS WILL BE A PURE RAW HTML CSS JAVASCRIPT PROJECT -->
@@ -14,5 +14,5 @@
 <script>
   // unconditionaly load html file in div
   document.getElementById("content").innerHTML =
-    '<object type="text/html" data="../sub_pages/landing_banner.html" ></object>';
+    '<object type="text/html" data="/pages/sub_pages/landing_banner.html" ></object>';
 </script>
