non_resposnive  landing and join us page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
   <!-- NO AI WILL BE USED IN THE PROJECT AT ALL -->
   <!-- THIS WILL BE A PURE RAW HTML CSS JAVASCRIPT PROJECT -->
   <!-- NO EXTERNAL STUFF WILL BE USED -->
-  <div onload="load_me()" id="content"></div>
+  <div id="content"></div>
+  <div id="join_us"></div>
 </html>
 <script>
   // unconditionaly load html file in div
   document.getElementById("content").innerHTML =
     '<object type="text/html" data="/pages/sub_pages/landing_banner.html" ></object>';
+  document.getElementById("join_us").innerHTML =
+    '<object type="text/html" data="/pages/sub_pages/join_us_announcement_board.html" ></object>';
 </script>
