--- a/pages/sub_pages/landing_banner.html
+++ b/pages/sub_pages/landing_banner.html
@@ -7,12 +7,28 @@
     <link rel="stylesheet" href="../../style/landing_banner.css" />
   </head>
   <body>
-    <img
-      class="backgorund_img"
-      src="../../assets/backgrounds/dark_purple__frame.jpg"
-      alt=""
-      srcset=""
-    />
-    <div id="test">ssdsd</div>
+    <div class="backgorund_img">
+      <div class="inner_landing_page">
+        <img class="banner" src="/assets/objects/banner.png" />
+        <img class="gun-hee" src="/assets/characters/gun-hee.png" />
+        <img
+          class="gun-hee shadow"
+          src="/assets/characters/gun-hee-shadow.png"
+        />
+        <!-- gun-hee top most layer -->
+        <img class="logo" src="/assets/logo/logo.png" alt="" />
+        <img
+          class="gun_hee_title"
+          src="/assets/objects/gun_hee_title.png"
+          alt=""
+        />
+        <img
+          class="gun_hee_title title_special"
+          src="/assets/objects/gun_hee_title.png"
+          alt=""
+        />
+        <p class="guild_text">GUILD</p>
+      </div>
+    </div>
   </body>
 </html>
